# NIMH_MEG_workshop

./: README.md  check_requirements.sh  makefile  pyproject.toml  setup.py  start_notebook.sh  start_notebook_Day1.sh  start_notebook_Day2.sh
Day1/: Day1_MRI_Processing.ipynb  Day1_MRI_processing.ipynb  Day1_preprocessing.ipynb  Lab1_preprocessing.ipynb  Lab2_frequency_analysis.ipynb  Lab3_MRI_processing.ipynb  Lab3_MRI_processing_new.ipynb  README.md
Day2/: Lab4_SourceLocalization.ipynb  Lab5_Beamforming.ipynb  Lab6_MakingGroupData.ipynb
extras/: Process_GONOGO_bids_ids_covbased_biowulf.py  batch_beamformer.py  datalad_pull.sh  fix_hv_dsets.py  morph_hariri_stcs_to_fsave.py  prep_mri_inputs.py  return_delet_subjects.py
