[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NIMH-MEG-Workshop"
description = "Training scripts for workshop"
readme = "README.md"
#requires-python = "<3.12"
#keywords = ["one", "two"]

authors = [
  { name="Jeff Stout", email="stoutjd@nih.gov" },
  { name="Allison Nugent", email="nugenta@nih.gov" },
  { name="Anna Namyst", email="namystam@nih.gov" },
]

license = {text = "UNLICENSE"}
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: UNLICENSE",
        "Operating System :: Linux/Unix",
    ]
dependencies = [
    'mne', 'numpy', 'scipy', 'pandas', 'nibabel', 'seaborn', 'mne_bids', 'nbdime', 'nih2mne @ git+https://github.com/nih-megcore/nih_to_mne.git@master',
   ]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ['Day*','extras']
